--- a/sbafs_ann/data/ch7_satz_max_25_SUNZ_80_89_tdiff_300_sec_20241030.yaml
+++ b/sbafs_ann/data/ch7_satz_max_25_SUNZ_80_89_tdiff_300_sec_20241030.yaml
@@ -33,6 +33,7 @@ n_truths: 5
 nn_cfg_file: ch7_satz_max_25_SUNZ_80_89_tdiff_300_sec_20241030.yaml
 nn_pattern: ch7_satz_max_25_SUNZ_80_89_tdiff_300_sec_20241030
 t_loss_file: ch7_satz_max_25_SUNZ_80_89_tdiff_300_sec_20241030_tloss.txt
+use_channel_quotas: false
 v_loss_file: ch7_satz_max_25_SUNZ_80_89_tdiff_300_sec_20241030_vloss.txt
 xmean: Xtrain_mean_ch7_satz_max_25_SUNZ_80_89_tdiff_300_sec_20241030.txt
 xscale: Xtrain_scale_ch7_satz_max_25_SUNZ_80_89_tdiff_300_sec_20241030.txt
