--- a/sbafs_ann/data/ch4_satz_max_15_SUNZ_90_180_tdiff_120_sec_20241120.yaml
+++ b/sbafs_ann/data/ch4_satz_max_15_SUNZ_90_180_tdiff_120_sec_20241120.yaml
@@ -26,6 +26,7 @@ nn_cfg_file: ch4_satz_max_15_SUNZ_90_180_tdiff_120_sec_20241120.yaml
 nn_pattern: ch4_satz_max_15_SUNZ_90_180_tdiff_120_sec_20241120
 sbaf_ann-version: 0.0.11.dev2+gcab1e20
 t_loss_file: ch4_satz_max_15_SUNZ_90_180_tdiff_120_sec_20241120_tloss.txt
+use_channel_quotas: false
 v_loss_file: ch4_satz_max_15_SUNZ_90_180_tdiff_120_sec_20241120_vloss.txt
 xmean: Xtrain_mean_ch4_satz_max_15_SUNZ_90_180_tdiff_120_sec_20241120.txt
 xscale: Xtrain_scale_ch4_satz_max_15_SUNZ_90_180_tdiff_120_sec_20241120.txt
