--- a/sbafs_ann/data/ch4_satz_max_25_SUNZ_90_180_tdiff_300_sec_20241030.yaml
+++ b/sbafs_ann/data/ch4_satz_max_25_SUNZ_90_180_tdiff_300_sec_20241030.yaml
@@ -25,6 +25,7 @@ n_truths: 3
 nn_cfg_file: ch4_satz_max_25_SUNZ_90_180_tdiff_300_sec_20241030.yaml
 nn_pattern: ch4_satz_max_25_SUNZ_90_180_tdiff_300_sec_20241030
 t_loss_file: ch4_satz_max_25_SUNZ_90_180_tdiff_300_sec_20241030_tloss.txt
+use_channel_quotas: false
 v_loss_file: ch4_satz_max_25_SUNZ_90_180_tdiff_300_sec_20241030_vloss.txt
 xmean: Xtrain_mean_ch4_satz_max_25_SUNZ_90_180_tdiff_300_sec_20241030.txt
 xscale: Xtrain_scale_ch4_satz_max_25_SUNZ_90_180_tdiff_300_sec_20241030.txt
