--- a/sbafs_ann/data/ch7_SATZ_less_15_SUNZ_0_89_TD_1_min.yaml
+++ b/sbafs_ann/data/ch7_SATZ_less_15_SUNZ_0_89_TD_1_min.yaml
@@ -33,6 +33,7 @@ n_hidden_layer_3: 5
 n_truths: 5
 nn_cfg_file: ch7_SATZ_less_15_SUNZ_0_89_TD_1_min.yaml
 t_loss_file: ch7_SATZ_less_15_SUNZ_0_89_TD_1_min_tloss.txt
+use_channel_quotas: false
 v_loss_file: ch7_SATZ_less_15_SUNZ_0_89_TD_1_min_vloss.txt
 xmean: Xtrain_mean_ch7_SATZ_less_15_SUNZ_0_89_TD_1_min.txt
 xscale: Xtrain_scale_ch7_SATZ_less_15_SUNZ_0_89_TD_1_min.txt
